# consentos

./: .env.example  CHANGELOG.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: release.yml
apps/admin-ui/: nginx.conf  package.json
apps/admin-ui/src/api/: analytics.ts  cookies.ts  iab-gvl.ts  sites.ts  system.ts
apps/admin-ui/src/components/: AddCookieModal.tsx  BannerBuilderTab.tsx  BannerPreview.tsx  ConsentBreakdownCards.tsx  IabVendorPicker.tsx  Layout.tsx  RegionalModesEditor.tsx  SiteConfigTab.tsx  SiteCookiesTab.tsx  SiteDashboardTab.tsx  SiteOverviewTab.tsx  UpdateBanner.tsx
apps/admin-ui/src/lib/: consent.ts
apps/admin-ui/src/pages/: SettingsPage.tsx  SiteDetailPage.tsx  SiteGroupDetailPage.tsx
apps/admin-ui/src/test/: BannerBuilderTab.test.tsx  BannerPreview.test.tsx  InfoTooltip.test.tsx  (+6 more)
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/versions/: 0006_iab_gvl.py  0007_disclosed_vendor_ids.py  0008_iab_vendors_cookie_max_age_bigint.py  0009_site_config_forced_locale.py  0009_site_config_nullable_inherited.py
apps/api/src/: celery_app.py  main.py
apps/api/src/config/: settings.py
apps/api/src/middleware/: security_headers.py
apps/api/src/models/: __init__.py  iab_gvl.py  org_config.py  site_config.py  site_group_config.py
apps/api/src/routers/: analytics.py  config.py  cookies.py  hosted_pages.py  iab_gvl.py  sites.py  system.py
apps/api/src/schemas/: analytics.py  iab_gvl.py  org_config.py  site.py  site_group_config.py  validators.py
apps/api/src/services/: analytics.py  config_resolver.py  iab_gvl.py  scanner.py  telemetry.py  update_check.py
apps/api/src/tasks/: iab_gvl.py  scanner.py  update_check.py
apps/api/tests/: test_analytics.py  test_config_resolver.py  test_cookies.py  test_extensions.py  test_health.py  test_iab_gvl.py  test_integration_analytics.py  test_integration_sites.py  test_middleware_security.py  test_routers_config.py  test_routers_cookies.py  test_routers_org_config.py  test_routers_sites.py  test_scan_scheduling.py  test_schemas_validators.py  test_site_group_config.py  test_update_check.py
apps/banner/: package.json
apps/banner/src/: banner.ts  blocking-mode.ts  consent.ts  cookies-widget.ts  gpp-api.ts  i18n.ts  loader.ts  tcf.ts  types.ts
apps/scanner/: pyproject.toml
apps/scanner/src/: crawler.py  worker.py
apps/scanner/tests/: test_crawler.py
docs/: staying-up-to-date.md  telemetry.md
helm/consentos/: Chart.yaml  values.yaml
scripts/: check-pg-version.sh  test-check-pg-version.sh
(+10 files in other folders)
