[project]
name = "consentos-scanner"
version = "0.2.0"
description = "ConsentOS — Playwright-based cookie scanner"
license = "Elastic-2.0"
requires-python = ">=3.12"

dependencies = [
    "playwright>=1.49,<2",
    "httpx>=0.28,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.8,<1",
    "pytest-cov>=6.0,<7",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
